--- a/app/memory.css
+++ b/app/memory.css
@@ -58,7 +58,7 @@ button {width: 100px}
 
 .gameField{
     display:flex;
-    background-color: grey;
+    background-color: red;
     border-style: solid;
     border-width: 1px;
     width: 100%;
@@ -67,7 +67,7 @@ button {width: 100px}
 
 .gameValue{
     flex-grow:1;
-    /*opacity: 0; !* makes text hidden *!*/
-    background-color:Red;
+    opacity: 0; /* makes text hidden */
+    background-color: red;
     cursor: default;
 }
